# fast-api-adder-demo

./: Dockerfile  Makefile  README.md  pyproject.toml
fast_api_adder_demo/: main.py
tests/: conftest.py  test_main.py
